# Dispatching-Algorithms

./: .gitiginore  CMakeLists.txt  README.md  fifo.c  priority  priority.c  procesos.txt  sjf  sjf.c
heap/: heap.c  heap.h
models/: models.c  models.h
parse/: parse.c  parse.h
plot/: process_plot.c  process_plot.h
